<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <group
        android:id="@+id/group_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tarefa"
            android:icon="@drawable/ic_note_add_black_24dp"
            android:title="@string/nav_tarefa" />
        <item
            android:id="@+id/nav_conta"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/nav_conta" />
    </group>


    <group
        android:id="@+id/group_bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sobre"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/nav_sobre" />
    </group>


</menu>
