<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_tarefa">

    <fragment
        android:id="@+id/navigation_tarefa"
        android:name="br.com.ifsp.aluno.allex.taskly.views.fragment.TarefaFragment"
        android:label="@string/title_tarefa"
        tools:layout="@layout/fragment_tarefa" />

    <fragment
        android:id="@+id/navigation_sincronizar"
        android:name="br.com.ifsp.aluno.allex.taskly.views.fragment.SincronizarFragment"
        android:label="@string/title_sincronizar"
        tools:layout="@layout/fragment_sincronizar"/>

    <fragment
        android:id="@+id/navigation_concluir"
        android:name="br.com.ifsp.aluno.allex.taskly.views.fragment.ConcluirFragment"
        android:label="@string/title_concluir"
        tools:layout="@layout/fragment_concluir" />
</navigation>
